Refactor routes and controllers, remove unnecessary routes
