# app/routes/service.js
@@ -1,11 +1,6 @@
 const controller = require("../controllers/service");
 const router = require("express").Router();
 
-router
-  .get("/", controller.getAll)
-  .get("/:id", controller.getOne)
-  .post("/", controller.createOne)
-  .put("/:id", controller.updateOne)
-  .delete("/:id", controller.deleteOne);
+router.get("/", controller.getAll);
 
 module.exports = router;
